<?xml version="1.0"?>
<package format="2">
  <name>roomba_dynamixel_controller</name>
  <version>0.0.0</version>
  <description>The roomba_dynamixel_controller package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>dynamixel_angle_msgs</build_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>
  </export>

</package>
