<?xml version="1.0"?>
<package format="2">
  <name>roomba_dynamixel_controller</name>
  <version>0.0.0</version>
  <description>The roomba_dynamixel_controller package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>dynamixel_angle_msgs</depend>

  <export>
  </export>

</package>
